fix z-index of links

--- a/sass/wedding.sass
+++ b/sass/wedding.sass
@@ -108,6 +108,9 @@ svg.penant-group
 
 
 .links
+  a
+    position: relative
+    z-index: 150
   a.selected
     color: #fd0100
 
